--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id="topBanner">NASA Image Searcher</h1>
 <div class="topRow">
     <div id="searchPic">Searchbox
-
+        <input type="date" id="picDateChosen">
 
     </div>
     <div id="dailyPic">
@@ -18,6 +18,13 @@
     </div>
 
     <div id="oldSearch">
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+        </ul>
 
     </div>
 
@@ -25,7 +32,7 @@
 
 <div id="bottomRow">
     <div id="searchVid">Search Video
-
+        <input type="date" id="vidDateChosen">
     </div>
     <div id="dailyVid">
         <iframe width="420" height="315" src="https://www.youtube.com/watch?v=4czjS9h4Fpg">
