--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
     <div id="dailyVid">
 
         <img id="potdImg" src="">
-        <!-- <iframe width="420" height="315" src="https://www.youtube.com/watch?v=4czjS9h4Fpg">
-</iframe> -->
+        <!-- <video muted controls id="potdVid" width="500px" height="200px" autoplay>
+        <source id="videoSource" src='https://www.youtube.com/embed/WJua8eXLX9o?rel=0' type="video/mp4"> </video> -->
+        <iframe id="potdVid" width="420" height="315" src="">
+</iframe>
+
     </div>
 
 </div>
