some css/html changes made

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 </head>
 <body>
+    
     <h1 id="topBanner">NASA Image Searcher</h1>
 <div class="topRow">
     <div id="searchPic">Searchbox
