--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="topRow">
     <div id="searchPic">Searchbox
         <input type="date" id="picDateChosen">
-
+<button id="saveImage"></button>
     </div>
     <div id="dailyPic">
         <a href="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/pia24482-4-1041.jpg?itok=rIASVfr6">test pic</a>
