--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Amazing Space</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="homePage()">
     <h1 id="topBanner">NASA Image Searcher</h1>
 <div class="topRow">
     <div id="searchPic">Searchbox
@@ -39,7 +40,7 @@
         <img id="potdImg" src="">
         <!-- <video muted controls id="potdVid" width="500px" height="200px" autoplay>
         <source id="videoSource" src='https://www.youtube.com/embed/WJua8eXLX9o?rel=0' type="video/mp4"> </video> -->
-        <iframe id="potdVid" width="420" height="315" src="">
+        <iframe class="vid" id="potdVid" width="420" height="315" src="">
 </iframe>
 
     </div>
