add script file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <title>Document</title>
 </head>
 
@@ -12,7 +13,8 @@
     <h1 id="topBanner">NASA Image Searcher</h1>
     <div class="topRow">
         <div id="searchPic">Searchbox
-            <input type="date" id="picDateChosen">
+            <input type="date" id="from-datepicker" >
+            <!--i want date picker in yyyy-mm-dd fromate-->
             <button id="saveImage"></button>
         </div>
         <div class="container">
@@ -56,7 +58,7 @@
 
     <script src="searchAPI.js"></script>
     <script src="script.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
 </body>
