added images from the rovers api

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Amazing Space</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="homePage()">
+<body>
     <h1 id="topBanner">NASA Image Searcher</h1>
 <div class="topRow">
     <div id="searchPic">Searchbox
