--- a/marsPage.html
+++ b/marsPage.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styleMars.css">
 </head>
-<body onload="marsInfo()">
+<body onload=marsInfo()>
 <div class="header" id="header">
     <h1 class="headOne" id="headOne">Cool Mars Info!</h1>
 
@@ -22,7 +22,15 @@
     <p class="sunRise" id='sunRise'>Sunrise:</p>
     <p class='sunSet' id='sunSet'>Sunset:</p>
     </div>
+<div class="rover" id="rover">Curiosity</div>
+<button class="changeRover" id="changeRover" onclick='chaneRovers()'>Change Rovers!</button>
+    <div class="roverImgs" id="roverImgs">
+        <img class="img0" id="img0" src="">
+        <img class="img1" id="img1" src="">
+        <img class="img2" id="img2" src="">
 
+
+    </div>
     
     <script src="script.js"></script>
     <script src="searchAPI.js"></script>
