--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onload="homePage()">
     
     <h1 id="topBanner">NASA Image Searcher</h1>
 <div class="topRow">
