Revert "More mars page"

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 </iframe>
   </div>
 
-  <button class="marshtml" id="marshtml">Mars Page</button>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- <script src="searchAPI.js"></script> -->
-    <script src="homePage.js"></script>
+    <script src="searchAPI.js"></script>
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
 </body>
 
 </html>
