fiexed some bugs with the code. Moved some html elements. Added a img and the patch of the rovers that the user is currently viewing imges of.

--- a/marsPage.html
+++ b/marsPage.html
@@ -25,6 +25,8 @@
 </div>
 <div class="rover" id="rover">Curiosity</div>
 <button class="changeRover" id="changeRover" onclick='chaneRovers()'>Change Rovers!</button>
+<img class="imgOfRover" id="imgOfRover" src="">
+<img class= "roverPatch" id="roverPatch">
 <button class="pageDecrease" id="pageDecrease">Back Page!</button>
 <button class="pageIncrease" id="pageIncrease">Next Page!</button>
 <div class="solDates">Choose a Sol date!
