working on responsive design of the mars page, and fixed an issue where the same api was being called twice. The potd api was being called twice, once to get the image using fetch, and once using jq to get its copyright and title and caption. I changed it so all info is coming from one call of the api, using fecth, not the jq version. Right now the script.js file is commented outed has no code inside is being used. All js code for the homepage is now in homepage.js

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
     </div>
-
+<button class="goToMarsPage" id="goToMarsPage">Cool Mars Info</button>
     <div id="bottomRow">
         <div id="searchVid">Search Video
             <input type="date" id="vidDateChosen">
