--- a/marsPage.html
+++ b/marsPage.html
@@ -11,7 +11,7 @@
 <div class="header" id="header">
     <h1 class="headOne" id="headOne">Cool Mars Info!</h1>
 
-
+<button class="toHome" id="toHome">Homepage</button>
 </div>
 <div class="topBar"><br></div>
 
