--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="topRow">
         <div id="searchPic">Searchbox
             <input type="date" id="from-datepicker" >
+            <button class="goToDate" id="goToDate">Got To Date</button>
             <!--i want date picker in yyyy-mm-dd fromate-->
             <button id="saveImage"></button>
         </div>
@@ -29,6 +30,7 @@
             <div id="copyrightPic">Copyrights</div>
             <div id="explanationPic">Explanation</div>
         </div>
+        <!-- <p>Date: <input type="text" id="datepicker"></p> -->
         <div id="oldSearch">
             <ul>
                 <li>1</li>
@@ -43,11 +45,7 @@
     </div>
 <button class="goToMarsPage" id="goToMarsPage">Cool Mars Info</button>
     <div id="bottomRow">
-        <div id="searchVid">Search Video
-            <input type="date" id="vidDateChosen">
-        </div>
-        <div id="dailyVid">
-
+       
         </div>
 
         <img id="potdImg" src="">
